fix site menu not overflowing
and enable live resizing.

--- a/css/app.css
+++ b/css/app.css
@@ -29,8 +29,8 @@ h3, h4 { /* Headers & Footer in Center & East panes */
  *	GLOBAL LAYOUT STYLES
  */
 .ui-layout-content {
-	overflow:		auto; /* add scrolling to content-divs (panel-wrappers) */
-	border-top:		0 !important; /* tab-buttons above this DIV already has a border-bottom */
+	overflow: visible;
+	border-top: 0 !important; /* tab-buttons above this DIV already has a border-bottom */
 	padding: 0;
 }
 
@@ -783,7 +783,7 @@ li[role=tab] .ui-icon {
     width: calc(100% - 64px);
 }
 
-#tabs-filetree{
+#tree-container{
     width: 100%;
     overflow: scroll;
 }
